# backend/internal/httpserver/route.go
@@ -34,6 +34,7 @@ func RegisterRoutes(server *http.ServeMux, cfg config.Config, pool *pgxpool.Pool
 
 	server.Handle("POST /races", requireAuth(http.HandlerFunc(raceHandler.Create)))
 	server.Handle("POST /races/{id}/join", requireAuth(http.HandlerFunc(raceHandler.Join)))
+	server.Handle("POST /races/{id}/leave", requireAuth(http.HandlerFunc(raceHandler.Leave)))
 	server.Handle("POST /races/{id}/start", requireAuth(http.HandlerFunc(raceHandler.Start)))
 	server.Handle("GET /races/{id}/text", requireAuth(http.HandlerFunc(raceHandler.Text)))
 	server.Handle("GET /races/{id}", requireAuth(http.HandlerFunc(raceHandler.Status)))
