# backend/internal/race/dtos.go
@@ -22,6 +22,10 @@ type joinRaceResponse struct {
 	SessionToken string `json:"session_token"`
 }
 
+type leaveRaceResponse struct {
+	RaceID string `json:"race_id"`
+}
+
 type startRaceResponse struct {
 	ID         string `json:"id"`
 	Status     string `json:"status"`
